@@ -13,9 +13,15 @@ SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules/")
 FIND_PACKAGE(Bluetooth REQUIRED)
 FIND_PACKAGE(OpenCV QUIET)
 IF(OpenCV_FOUND)
-	MESSAGE(STATUS "Found OpenCV: ${OpenCV_LIBS}")
+	MESSAGE(STATUS "Found OpenCV:")
+	MESSAGE(STATUS "   - Include Dir: ${OpenCV_INCLUDE_DIRS}")
+	MESSAGE(STATUS "   - Libs: ${OpenCV_LIBS}")
+	MESSAGE(STATUS "   - Version: ${OpenCV_VERSION}")
+	IF(NOT "${OpenCV_VERSION}" STREQUAL "2.2.0")
+		ADD_DEFINITIONS(-DCV_OLD)
+	ENDIF(NOT "${OpenCV_VERSION}" STREQUAL "2.2.0")
 ELSE(OpenCV_FOUND)
-	MESSAGE(STATUS "OpenCV not found. WiiC-ML will not be compiled.")
+	MESSAGE(STATUS "OpenCV not found but not required. WiiC-ML will not be compiled.")
 ENDIF(OpenCV_FOUND)
 
 # Source code
